setting home page images - fixing bug on mobile 2

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,6 @@
  */
 
 
-* {
-	border: 1px solid gray !important;
-}
-
 body {
 	background-color: #FAFAFA;
 }
